feat: Support for external libraries in JS sandbox (#47)
