# typescript/packages/usuba-api/openapi.json
@@ -2,13 +2,63 @@
   "openapi": "3.0.3",
   "info": {
     "title": "usuba",
-    "description": "An anything-to-Common-Wasm build server",
+    "description": "A Common server",
     "license": {
       "name": ""
     },
     "version": "0.1.0"
   },
   "paths": {
+    "/api/v0/bundle": {
+      "post": {
+        "tags": [
+          "crate::routes"
+        ],
+        "operationId": "bundle_javascript",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/BundleRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully built the module",
+            "content": {
+              "text/javascript": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request body",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v0/module": {
       "post": {
         "tags": [
@@ -135,6 +185,21 @@
         "properties": {
           "id": {
             "type": "string"
+          }
+        }
+      },
+      "BundleRequest": {
+        "type": "object",
+        "required": [
+          "source"
+        ],
+        "properties": {
+          "source": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "binary"
+            }
           }
         }
       },
